<resources>
    <string name="app_name">FinalProject</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="Short_review">نقد و بررسی متخصصین دیجی کالا</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">کليه حقوق اپلیکیشن متعلق به شرکت نوآوران فن آوازه (فروشگاه آنلاین دیجی‌کالا) می‌باشد.</string>
    <string name="accept_digikala_rules">با انتخاب این دکمه، موافقت خود را با قوانین و شرایط استفاده از دیجی‌کالا اعلام میکنید</string>
    <string name="acraMessage">خطای پیش آمده به زودی توسط دیجی‌کالا رفع خواهد شد</string>
    <string name="action_retry">تلاش مجدد</string>
    <string name="action_settings">Settings</string>
    <string name="activation_code">کد فعال سازی</string>
    <string name="activity_main_newsletter">MainNewsletter</string>
    <string name="activity_newsletter_get_email">NewsletterGetEmail</string>
    <string name="activity_newsletter_success">NewsletterSuccess</string>
    <string name="add">افزودن</string>
    <string name="add_address">افزودن آدرس جدید</string>
    <string name="add_card">اضافه کردن کارت (با درگاه پرداخت اینترنتی)</string>
    <string name="add_comment_success_message">نطر شما با موفقیت ثبت شد</string>
    <string name="add_gift_card">ثبت کارت هدیه</string>
    <string name="add_new_comment">+ افزودن نقد و بررسی جدید</string>
    <string name="add_product_config">http://digikala:28103@192.168.1.240:200/api/Cart/AddProductConfig</string>
    <string name="add_to_card">افزودن به سبد خرید</string>
    <string name="add_voucher">ثبت بن تخفیف</string>
    <string name="add_widget">Add widget</string>
    <string name="add_your_address">ادامه آدرس خود را وارد کنید...</string>
    <string name="address_cont">نشانیِ پُستی</string>
    <string name="address_delete">حذف آدرس</string>
    <string name="addtonewfolder">افزودن به پوشه جدید</string>
    <string name="adrs_emergency_phone">شماره‌یِ تلفنِ همراهِ گیرنده (ضروری)</string>
    <string name="adrs_phone">شماره‌یِ تلفنِ ثابت گیرنده</string>
    <string name="album_by_id">http://digikala:28103@192.168.1.240:200/api/ProductCache/GetAlbumByProductId/</string>
    <string name="all_products_category">مشاهده همه دسته‌های محصولات</string>
    <string name="app_invite_success">دعوت‌نامه با موفقیت ارسال شد</string>
    <string name="app_invites_failed">دعوت‌نامه ارسال نشد!</string>
    <string name="app_invites_message_footer">را در دیجی‌کالا ببین.</string>
    <string name="app_invites_message_footer_video">این ویدیو را در دیجیکالا ببین.</string>
    <string name="app_invites_message_header">ویدیو های مرتبط با</string>
    <string name="app_invites_success">دعوت‌نامه‌ها با موفقیت ارسال شدند</string>
    <string name="app_invites_title">دعوت از دوستان</string>
    <string name="are_you_sure_for_delete">آیا از حذف مطمئنید؟</string>
    <string name="are_you_sure_for_delete_address">آیا مایل به حذف این آدرس هستید؟</string>
    <string name="are_you_sure_for_delete_product">توجه داشته باشید که هدیه محصول نیز به همراه آن حذف خواهد شد!</string>
    <string name="are_you_sure_for_delete_product_titr">آیا مایل به حذف این محصول از سبد خرید هستید؟</string>
    <string name="azPang">از 5</string>
    <string name="az_magmooe">از مجموع</string>
    <string name="azdah">از 10</string>
    <string name="back_to_app">بازگشت به اپلیکیشن</string>
    <string name="baner_slider">http://digikala:28103@192.168.1.240:200/api/Banner/GetBanner</string>
    <string name="banking_credit_card_apply_button_text">ثبت اطلاعات</string>
    <string name="banking_credit_card_error">خطا رخ داد! لطفا دوباره تلاش کنید</string>
    <string name="banking_credit_card_saveInf">اطلاعات با موفقیت ثبت شد</string>
    <string name="basket_null_message">سبد خرید شما خالی است!</string>
    <string name="baskets_category_list">سبد خرید</string>
    <string name="bastan">بستن</string>
    <string name="befor_order_login">لطفا برای ورود ایمیل خود را وارد کنید</string>
    <string name="best_comments">مفیدترین نقد و بررسی</string>
    <string name="best_comments_id">best_comments_id</string>
    <string name="best_sale">پرفروشترین</string>
    <string name="bill_code">شناسه قبض :</string>
    <string name="birth_date">تاریخ تولد</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="button_clear_history">پاک کردن تاریخچه</string>
    <string name="c_count">تعداد :</string>
    <string name="can_use_digibon">تعداد دیجی بن قابل استفاده</string>
    <string name="cancel">لغو</string>
    <string name="cancel_and_return">لغو و بازگشت</string>
    <string name="card_emergency_phone">شماره تماس اضطراری:</string>
    <string name="card_number">شماره کارت بانکی</string>
    <string name="card_phone">شماره تماس ثابت:</string>
    <string name="cart">سبد خرید</string>
    <string name="cart_add_adrs">http://digikala:28103@192.168.1.240:200/api/Recipient/Add</string>
    <string name="cart_addresses">http://digikala:28103@192.168.1.240:200/api/Recipient/Get</string>
    <string name="cart_city">شهر:</string>
    <string name="cart_delete_adrs">http://digikala:28103@192.168.1.240:200/api/Recipient/Delete/</string>
    <string name="cart_delete_item">http://digikala:28103@192.168.1.240:200/api/Cart/DeleteItem</string>
    <string name="cart_email_check">http://digikala:28103@192.168.1.240:200/api/Account/CheckExistUserName</string>
    <string name="cart_login">http://digikala:28103@192.168.1.240:200/api/Account/Login</string>
    <string name="cart_postal_code">کدپستی:</string>
    <string name="cart_price">قیمت</string>
    <string name="cart_problem_dialog_message">متاسفانه در شرایط موجود در سبد شما تغییراتی رخ داده است.</string>
    <string name="cart_problem_dialog_positive">بازگشت به سبد خرید</string>
    <string name="cart_province">استان:</string>
    <string name="cart_register">http://digikala:28103@192.168.1.240:200/api/Account/SignUp</string>
    <string name="cart_save_shipping">http://digikala:28103@192.168.1.240:200/api/Cart/SaveShippingStep</string>
    <string name="cart_send_type">http://digikala:28103@192.168.1.240:200/api/SubmitType/GetByCartId</string>
    <string name="cart_shipping">http://digikala:28103@192.168.1.240:200/api/Cart/GetShippingInfo</string>
    <string name="cart_total_sale_amount">قیمت نهایی</string>
    <string name="cat_menu_desc">دسته‌بندی اصلی</string>
    <string name="category">دسته‌بندی</string>
    <string name="category_list">دسته‌بندی ها</string>
    <string name="category_main">http://digikala:28103@192.168.1.240:200/api/Category/GetMainMenu</string>
    <string name="category_menu_item">http://digikala:28103@192.168.1.240:200/api/Category/GetCategoryByPath</string>
    <string name="cdesc" />
    <string name="cell_number_title">شماره همراه :</string>
    <string name="change_address">تغییر آدرس</string>
    <string name="change_count">http://digikala:28103@192.168.1.240:200/api/Cart/ChangeCount</string>
    <string name="change_email">تغییر ایمیل</string>
    <string name="change_password_create_new_password_text">ایجاد کلمه عبور جدید</string>
    <string name="change_password_empty_text">کلمه عبور را وارد نمایید</string>
    <string name="change_password_new_password_text">کلمه عبور جدید</string>
    <string name="change_password_not_equal">کلمه عبور یکسان نیست</string>
    <string name="change_password_old_password_text">کلمه عبور قدیم</string>
    <string name="change_password_repeat_new_password_text">تکرار کلمه عبور جدید</string>
    <string name="change_password_title_text">لطفا کلمه عبور جدید خود را در زیر وارد نمایید</string>
    <string name="change_password_toolbar_text">ایجاد کلمه عبور جدید</string>
    <string name="character_counter_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="check_mac_address">http://digikala:28103@192.168.1.240:200/api/ApiInformation/CheckMackAddressIsValid</string>
    <string name="checkout_submit_cost">هزینه ارسال مرسوله</string>
    <string name="choose_address">انتخاب آدرس</string>
    <string name="choose_payment_mode">انتخاب شیوه پرداخت</string>
    <string name="choose_product_info">انتخاب خصوصیات محصول</string>
    <string name="choose_warranty">انتخاب گارانتی</string>
    <string name="choose_warranty_color">انتخاب رنگ و گارانتی</string>
    <string name="content_description">توضیح محتوا</string>
    <string name="digikala_login">ورود به دیجی‌کالا</string>
    <string name="digikala_register">ثبت نام در دیجی‌کالا</string>
    <string name="district_choose_nearest">اگر محله خود را در لیست پیدا نکردید لطفا نزدیک ترین محله به آدرس خود را انتخاب کنید</string>
    <string name="hint_password">کلمه عبور</string>
    <string name="hint_username">شماره موبایل یا ایمیل</string>
    <string name="hint_username_phone">شماره موبایل</string>
    <string name="info_register">ثبت اطلاعات</string>
    <string name="login">ورود</string>
    <string name="phone_code">کد</string>
    <string name="postal_code">کدِ پُستی</string>
    <string name="reciever_name">نام و نامِ خانوادگیِ گیرنده</string>
    <string name="register">ثبت نام</string>
    <string name="register_in_digikala">ثبت نام در دیجی کالا</string>
</resources>