<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:textView="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@color/digikala_white_pure"
        android:gravity="center_horizontal"
        tools:context=".view.fragment.LoginFragment">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/toolbarHeight_actionbar"
            android:background="@color/digikala_red_dark"
            android:gravity="center_vertical"
            textView:layout_constraintEnd_toEndOf="parent"
            textView:layout_constraintStart_toStartOf="parent"
            textView:layout_constraintTop_toTopOf="parent">



            <ImageButton
                android:id="@+id/toolbar_login_iv_back"
                android:layout_width="48.0dip"
                android:layout_height="48.0dip"
                android:layout_alignParentRight="true"
                android:layout_marginStart="4.0dip"
                android:layout_marginLeft="4.0dip"
                android:layout_marginTop="4.0dip"
                android:layout_marginEnd="4.0dip"
                android:layout_marginRight="4.0dip"
                android:layout_marginBottom="4.0dip"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="12.0dip"
                android:src="@drawable/ic_arrow_back_white_24dp" />

            <TextView
                android:id="@+id/toolbar_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toLeftOf="@id/toolbar_login_iv_back"
                android:layout_toRightOf="@id/toolbar_login_iv_search"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="true"
                android:gravity="right|center"
                android:lines="1"
                android:text="@string/login"
                android:textColor="@color/digikala_white_pure"
                android:textSize="18.0sp"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/toolbar_login_iv_search"
                android:layout_width="48.0dip"
                android:layout_height="48.0dip"
                android:layout_marginTop="4.0dip"
                android:layout_marginBottom="4.0dip"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/content_description"
                android:padding="12.0dip"
                android:src="@drawable/ic_search_white_24dp" />


        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="none"
            textView:layout_constraintBottom_toTopOf="@+id/basket_login_button"
            textView:layout_constraintEnd_toEndOf="parent"
            textView:layout_constraintHorizontal_bias="0.0"
            textView:layout_constraintStart_toStartOf="parent"
            textView:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            textView:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/digikala_white_pure"
                android:gravity="center_horizontal"
                android:orientation="vertical">


                <EditText
                    android:id="@+id/basket_login_email"
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/ic_email"
                    android:drawablePadding="16.0dip"
                    android:gravity="right"
                    android:hint="@string/hint_username_phone"
                    android:imeOptions="actionNext"
                    android:textSize="14.0sp" />


                <EditText
                    android:id="@+id/basket_login_password"
                    android:layout_width="307dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="18dp"
                    android:drawableRight="@drawable/ic_lock"
                    android:drawablePadding="16.0dip"
                    android:gravity="right"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword"
                    android:textSize="14.0sp" />


                <TextView
                    android:id="@+id/login_tv_register"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="32dp"
                    android:text="@string/digikala_register"
                    android:textColor="@color/digikala_green_dark" />

            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/basket_login_button"
            android:layout_width="fill_parent"
            android:layout_height="56.0dip"
            android:layout_alignParentBottom="true"
            android:background="#ff1e88e5"
            android:gravity="center"
            android:orientation="horizontal"
            textView:layout_constraintBottom_toBottomOf="parent"
            textView:layout_constraintEnd_toEndOf="parent"
            textView:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/btn_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_chevron_right_white_24dp"
                android:drawablePadding="8.0dip"
                android:fontFamily="@font/iran_sans"
                android:gravity="center"
                android:text="@string/digikala_login"
                android:textColor="@color/digikala_white_pure"
                android:textSize="17.0sp" />

            <ProgressBar
                android:id="@+id/login_loading"
                android:layout_width="48.0dip"
                android:layout_height="48.0dip"
                android:layout_gravity="center"
                android:visibility="gone" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>