<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:textView="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/digikala_white_pure"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/toolbarHeight_actionbar"
            android:background="@color/digikala_red_dark"
            android:gravity="center_vertical"
            textView:layout_constraintEnd_toEndOf="parent"
            textView:layout_constraintStart_toStartOf="parent"
            textView:layout_constraintTop_toTopOf="parent">



            <ImageButton
                android:id="@+id/toolbar_register_iv_back"
                android:layout_width="48.0dip"
                android:layout_height="48.0dip"
                android:layout_alignParentRight="true"
                android:layout_marginStart="4.0dip"
                android:layout_marginLeft="4.0dip"
                android:layout_marginTop="4.0dip"
                android:layout_marginEnd="4.0dip"
                android:layout_marginRight="4.0dip"
                android:layout_marginBottom="4.0dip"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:padding="12.0dip"
                android:src="@drawable/ic_arrow_back_white_24dp" />

            <TextView
                android:id="@+id/toolbar_register_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_gravity="center_vertical"
                android:layout_toLeftOf="@id/toolbar_register_iv_back"
                android:layout_toRightOf="@id/toolbar_register_iv_search"
                android:clickable="true"
                android:ellipsize="end"
                android:focusable="true"
                android:gravity="right|center"
                android:lines="1"
                android:text="@string/register"
                android:textColor="@color/digikala_white_pure"
                android:textSize="18.0sp"
                android:visibility="visible" />

            <ImageButton
                android:id="@+id/toolbar_register_iv_search"
                android:layout_width="48.0dip"
                android:layout_height="48.0dip"
                android:layout_marginTop="4.0dip"
                android:layout_marginBottom="4.0dip"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/content_description"
                android:padding="12.0dip"
                android:src="@drawable/ic_search_white_24dp" />


        </RelativeLayout>

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scrollbars="none"
            textView:layout_constraintBottom_toTopOf="@+id/register_btn"
            textView:layout_constraintEnd_toEndOf="parent"
            textView:layout_constraintHorizontal_bias="0.0"
            textView:layout_constraintStart_toStartOf="parent"
            textView:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            textView:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@color/digikala_white_pure"
                android:gravity="center_horizontal"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/register_email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32.0dip"
                    android:layout_marginTop="0.0dip"
                    android:layout_marginRight="32.0dip"
                    android:drawableRight="@drawable/ic_email_grey600_18dp"
                    android:drawablePadding="16.0dip"
                    android:gravity="right"
                    android:hint="@string/hint_username"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:paddingBottom="8.0dip"
                    android:textColor="@color/digikala_black_light"
                    android:textSize="14.0sp" />

                <EditText
                    android:id="@+id/register_password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32.0dip"
                    android:layout_marginTop="16.0dip"
                    android:layout_marginRight="32.0dip"
                    android:drawableRight="@drawable/ic_lock"
                    android:drawablePadding="16.0dip"
                    android:gravity="right"
                    android:hint="@string/hint_password"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingBottom="8.0dip"
                    android:textColor="@color/digikala_black_light"
                    android:textSize="14.0sp" />
            </LinearLayout>
        </ScrollView>

        <LinearLayout
            android:id="@+id/register_btn"
            android:layout_width="fill_parent"
            android:layout_height="56.0dip"
            android:layout_alignParentBottom="true"
            android:background="@color/digikala_green_light"
            android:gravity="center"
            android:orientation="horizontal"
            textView:layout_constraintBottom_toBottomOf="parent"
            textView:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@id/btn_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_chevron_right_white_24dp"
                android:drawablePadding="8.0dip"
                android:gravity="center"
                android:text="@string/register_in_digikala"
                android:textColor="@color/digikala_white_pure"
                android:textSize="17.0sp" />

            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="48.0dip"
                android:layout_height="48.0dip"
                android:layout_gravity="center"
                android:visibility="gone" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>